# ddb

./: paper.txt
Fall 2017/Project/: benchmark.doc
Fall 2017/Project/Project_Ref/: 陈俊 2009210893  陈诚 2009210894 张腾 2009210958.docx
Fall 2017/Project/eval_benchmark/: Benchmark_Documentation(Student).doc  DDB实验检查单.docx  ~$nchmark_Documentation(Student).doc
Fall 2017/Project/sample_data/: asg.tsv  emp.tsv  job.tsv
Fall 2017/Slides/: 00-Welcome.pptx  01. Introduction.pptx  02. Distributed Database Design-2.pptx  03. Query Processing-1.pptx  03. Query Processing-2.pptx  03. Query Processing-3.pptx  03. Query Processing-4.pptx  05. Query Optimization-3.pptx  06. Transaction Management.pptx  11. Distributed Concurrency Control - 3 of 3.ppt  11. Distributed Concurrency Control - 3 of 3.pptx  12. Distributed DBMS Reliability - 1 of 3.ppt  12._Distributed_DBMS_Reliability_-_3_of_3.pptx  CourseProject.pptx  P-HORIZONTAL.doc
Fall_2017/Project/: DDBEvalForm2017.doc
Fall_2017/Project/eval_benchmark/: Benchmark_Documentation(Teacher).doc  DDB实验检查单.docx
Fall_2017/Project/midterm/: minterm-report-li.pptx
Fall_2017/Project/sample_data/: sal.tsv
Fall_2017/Slides/: 02. Distributed Database Design-1.ppt  05. Query Optimization-1.pptx  05. Query Optimization-2.pptx  05. Query Optimization-3.pptx  06. Transaction Management.pptx  11. Distributed Concurrency Control - 2 of 3.pptx  12. Distributed DBMS Reliability - 1 of 3.ppt  COM-MIN.doc  INGRES_QOA.doc  R_Star_QOA.doc
Fall_2018/Project/Exam/: DDBEvalForm2018.doc
Fall_2018/Projects/: Notes.txt
Fall_2018/Slides/: 00-Welcome.pptx  01-Introduction.pptx  02-Distributed_Database_Design.pptx  03-Overview_of_Query_Processing.pptx  04-Query_Decomposition_and_Localization.pptx  05-Query_Optimization-1.pptx  05-Query_Optimization-2.pptx  11-Distributed_Concurrency_Control-1.pptx  11-Distributed_Concurrency_Control-2.pptx  12-Distributed_DBMS_Reliability-2.pptx  12-Distributed_DBMS_Reliability-3.pptx  D1-MapReduce.pptx  R_QOA.doc
Fall_2018/Test/: Test-1.doc  Test-2.doc
Fall_2019/Slides/: 02-Distributed_Database_Design.pptx  03-Overview_of_Query_Processing.pptx  04-Query_Decomposition_and_Localization.pptx  05-Query_Optimization-1.pptx  05-Query_Optimization-2.pptx  05-Query_Optimization-3.pptx  06. Transaction Management.pptx  11-Distributed_Concurrency_Control-2.pptx  12-Distributed_DBMS_Reliability-1.ppt  12-Distributed_DBMS_Reliability-2.pptx  12-Distributed_DBMS_Reliability-3.pptx  CourseProject.pptx  D_INGRES_QOA.doc
Fall_2020/: 04-Query_Decomposition_and_Localization.pptx  05-Query_Optimization-1.pptx  05-Query_Optimization-3.pptx  An Example of Transaction Program.doc  ~$ Example of Transaction Program.doc  ~$06. Transaction Management.pptx
Fall_2020/CourseProjects/: CourseProject.pptx
Fall_2020/Slides/: 00-Welcome.pptx  01-Introduction.pptx  02-Distributed_Database_Design.pptx  03-Overview_of_Query_Processing.pptx  05-Query_Optimization-3.pptx  11-Distributed_Concurrency_Control-1.pptx  11-Distributed_Concurrency_Control-2.pptx  12-Distributed_DBMS_Reliability-1.ppt  12-Distributed_DBMS_Reliability-2.pptx  12-Distributed_DBMS_Reliability-3.pptx
Fall_2021/Projects/: project_kick-off.pptx
Fall_2021/Slides/: 01-Introduction.pptx  02-Distributed_Database_Design.pptx  03-Overview_of_Query_Processing.pptx  04-Query_Decomposition_and_Localization.pptx
Fall_2021/Tutorials/ETCD/: mvcc-final.pptx  (+2 more)
Student_Projects/2018/GroupB/share/rpcDemo/: CMakeLists.txt  client.cpp  server.cpp
Student_Projects/2018/GroupB/share/select/: CMakeLists.txt  local_sql.cpp  query_tree_with_fragment.cpp  rpc_sql.cpp  rpc_sql.h
Student_Projects/2020/DDBS/: CMakeLists.txt  README.md  main.cpp
Student_Projects/2020/DDBS/data-loader/: Attribute.cpp  Attribute.h  CMakeLists.txt  DataLoader.cpp  DataLoader.h  Fragment.cpp  Fragment.h  Predicate.cpp  Predicate.h  Relation.cpp  Relation.h  Site.cpp  Site.h
Student_Projects/2020/DDBS/files/: data.json  test.sql  test_sql.sql
Student_Projects/2020/DDBS/files/data-loader/: site1_data_loader.sql  site2_data_loader.sql  site3_data_loader.sql  site4_data_loader.sql
Student_Projects/2020/DDBS/files/midterm/: CMakeLists.txt  loadtable.cpp  main.cpp  query.cpp  query.proto  result.json
Student_Projects/2020/DDBS/files/midterm/sql-scripts/: test-users-0-10.77.70.172.sql  test-users-1-10.77.70.189.sql  test-users-2-10.77.70.188.sql
Student_Projects/2020/DDBS/files/mysql/: book.csv  customer.csv  ddb.pdm  ddb.sql  gendata.py  orders.csv  publisher.csv
Student_Projects/2020/DDBS/network-utils/: CMakeLists.txt  network-test.cpp  network.h
Student_Projects/2020/DDBS/query-tree-scheduler/: CMakeLists.txt
Student_Projects/2020/DDBS/query-tree-scheduler/proto/: ddb.proto
Student_Projects/2020/DDBS/query-tree-scheduler/src/: MysqlConnectionPool.hpp  execute_query.cpp  load_query.cpp  network.cpp  schedule_query.cpp
Student_Projects/2020/DDBS/sql-processor/: CMakeLists.txt  DeleteStatement.cpp  DeleteStatement.h  InsertStatement.cpp  InsertStatement.h  SQLProcessor.cpp  SQLProcessor.h  SQLSelectProcessor.cpp  SelectStatement.cpp  SelectStatement.h  get_prefix.cpp
Student_Projects/2020/DDBS/utils/: utils.h
Student_Projects/2020/ddbms200/executor/cpp/: CMakeLists.txt  executor.cpp  executor.h  executor_multi.cpp  executor_multi.h  mysql_connector  mysql_connector.cpp  mysql_connector.h  test  test.cpp  test_tree  test_tree.cpp
Student_Projects/2020/ddbms200/transfer/transfer/: CMakeLists.txt  Makefile  client.cc  readme.md  server.cc  server_tmp  test.sql  transfer.grpc.pb.h  transfer.h  transfer.pb.h
Student_Projects/2021/ddb-team2/: CMakeLists.txt  ddb.pb.h  test.sh  test.sql
Student_Projects/2021/ddb-team2/meta/: meta.cpp  meta.h
Student_Projects/2021/ddb-team2/plan-scheduler/: CMakeLists.txt  Makefile  ddb.pb.cc  import_meta.cc  plan_scheduler.cpp  plan_scheduler.h  service.cc
Student_Projects/2021/ddb-team2/plan-scheduler/proto/: ddb.proto
Student_Projects/2021/ddb-team2/utils/: CMakeLists.txt  Makefile  etcd_test.cc.back  etcd_utils.cpp.back  etcd_utils.h.back  network.cpp  network.h
(+927 files in other folders)
