cmake_minimum_required(VERSION 3.0.0)
add_definitions(-std=c++11)
set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-pthread -lrpc_sql -std=c++11 -ljson -lcurl")
project(select)
set(CUSTOM_INC /home/tommenx/demo/include)
set(RPC_LIB /home/tommenx/share/rpclib/build/librpc.a)
#set(JSON_LIB /home/tommenx/download/jsoncpp-src-0.5.0/libs/linux-gcc-5.4.0/libjson.a)
#set(CURL_LIB /home/tommenx/share/rpclib/build/libcurl.a)
#set(RPC_SQL_LIB /home/tommenx/share/demo/build/librpc_sql.a)
link_directories(/home/tommenx/demo/lib/)
include_directories(${CUSTOM_INC})
add_executable(select rpc_sql.cpp local_sql.cpp query_tree_with_fragment.cpp )
target_link_libraries(select libmysqlcppconn.so ${RPC_LIB}) 
